sample-app/sample-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sample-app
    namespace: app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: sample-app
    template:
        metadata:
            labels:
                app: sample-app
        spec:
            containers:
            - name: sample-app
              image: nginx:latest
              ports:
                - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: sample-app-service
    namespace: app
spec:
    selector:
        app: sample-app
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
