sample-app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app
  namespace: app
spec:
  parentRefs:
  - name: public-gw
    namespace: istio-system
  hostnames: ["app.local"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sample-app-service
      port: 80
      kind: Service
